Thiết kế giao diện mới, đưa được một phần giao diện sang ứng dụng, giao diện bên web vừa xong danh sách sự cố hoàn thành và chưa hoàn thành nhưng chưa hoàn thiện, chưa sửa giao diện danh sách faqs

--- a/Giao dien/ChiTietSuCo.html
+++ b/Giao dien/ChiTietSuCo.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h3 class="logoTitle">Helpdesk</h3>
+    <h3 class="sectionTitle">
+        <img src="./image/vietnamFlag.png" alt="" onclick="alert('hello')">&nbsp;
+        <img src="./image/englishFlag.png" alt="" onclick="alert('hello')">&nbsp;
+        <span id="hiUser">Chào quản lý Phan Hải Ly</span>
+    </h3>
     <div class="navi">
         <a href="#" class="navi-item">TẠO TÀI KHOẢN</a>
         <a href="#" class="navi-item"> TẠO FAQ</a>
